Inclusão de link do projeto.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <script src="script.js"></script>
 
     <footer>
-        <p>Desenvolvido por Silvair Leite Soares | <a href="https://www.linkedin.com/in/silvairleitesoares/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
+        <p>Desenvolvido por Silvair Leite Soares | <a href="https://www.linkedin.com/in/silvairleitesoares/" target="_blank" rel="noopener noreferrer">LinkedIn</a> | <a href="https://github.com/silvairsoares/pec_blindagem" target="_blank" rel="noopener noreferrer">Contribua no GitHub</a></p>
     </footer>
 </body>
 </html>
