Inclusao de tema escuro

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <!-- Incluindo a biblioteca Chart.js para os gráficos -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body>
+<body class="dark-theme">
 
     <div class="dashboard-container">
         <header>
             <h1>Dashboard da Votação - PEC da Blindagem</h1>
+            <button id="theme-toggle">Mudar Tema</button>
         </header>
 
         <section class="intro-text">
