Atualiza referências da PEC 9/2023 para PEC 10/2023 no README.md e index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <section class="intro-text">
             <p>
-                A <a href="https://www.camara.leg.br/proposicoesWeb/fichadetramitacao?idProposicao=2352476" target="_blank" rel="noopener noreferrer">Proposta de Emenda à Constituição (PEC) 9/2023</a>, de autoria do Deputado Delegado Marcelo Freitas (União/MG), é popularmente conhecida como 'PEC da Blindagem'. Ela propõe mudanças nas regras de inelegibilidade e na imunidade parlamentar, gerando amplo debate no Congresso Nacional.
+                A <a href="https://www25.senado.leg.br/web/atividade/materias/-/materia/170519" target="_blank" rel="noopener noreferrer">Proposta de Emenda à Constituição (PEC) 10/2023</a>, de autoria de Celso Sabino - PSDB/PA, é popularmente conhecida como 'PEC da Blindagem'. Ela propõe mudanças nas regras de inelegibilidade e na imunidade parlamentar, gerando amplo debate no Congresso Nacional.
                 
                 <br>
                 Este dashboard interativo apresenta como cada deputado votou na proposta.
